--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
 }
+
 
 body {
     font-family: "Nunito", sans-serif;
@@ -13,15 +16,14 @@ body {
     color: black;
     max-width: 100%;
     overflow-x: hidden;
+    overflow-y: scroll;
+   
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-div, section, span, ul, li, a, header {
-    box-sizing: border-box;
-}
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Playfair Display";
@@ -63,6 +65,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     color: white;
+   
 }
 
 .main-name {
@@ -139,11 +142,11 @@ nav ul li a {
 
 .intro-info {
     height: 92vh;
+    min-height: 80vh;
     background-color: pink;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 1rem 5rem 1rem 5rem;
     border-bottom: 2px solid #000;
 }
 
@@ -153,7 +156,7 @@ nav ul li a {
 
 .intro-description h2 {
     font-size: 2.8em;
-    margin-top: 10px;
+    margin-top: .1vw;
 }
 
 .intro-description p {
@@ -162,7 +165,7 @@ nav ul li a {
 
 .intro-long-text {
     max-width: 450px;
-    margin-top: 30px;
+    margin-top: 1vw;
     word-wrap: break-word;
     word-spacing: 4px;
 }
@@ -217,11 +220,12 @@ nav ul li a {
 
 .about-info {
     height: 65vh;
+    min-height: 60vh;
     max-width: 100%;
     background-color: #E0E4E2;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: center;   
     border-bottom: 2px solid #000;
 }
 
@@ -230,7 +234,6 @@ nav ul li a {
     display: flex;
     flex-direction: row;
     justify-content: center;
- 
     border-radius: 50%;
 }
 
@@ -282,7 +285,7 @@ nav ul li a {
 }
 
 .about-description {
-    margin: 7.5vw 6vw 2vw 4vw;
+    margin: 9vw 6vw 2vw 4vw;
 }
 
 .about-description h2 {
@@ -366,6 +369,7 @@ nav ul li a {
     background-color: #F0D7C2;
     display: flex;
     flex-direction: column;
+    
     align-items: center;
     border-bottom: 2px solid #000;   
 }
@@ -449,10 +453,7 @@ nav ul li a {
 }
 
 .grad-hat {
-    position: absolute;
-    right: 14vw;
-    top: 9vw;
-    transform: rotate(15deg);
+    display: none;
 }
 
 @media (max-width: 1300px) {
