--- a/main.css
+++ b/main.css
@@ -2,9 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
-
 
 body {
     font-family: "Nunito", sans-serif;
@@ -17,7 +15,6 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
-   
 }
 
 html {
@@ -29,19 +26,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Playfair Display";
 }
 
-.intro-info {
+.intro-info, footer {
     background: linear-gradient(-45deg, #a7e6b6, #766dcc, #e4bb95, #ec8edd);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    height: 100vh;
 }
 
-footer {
-    background: linear-gradient(-45deg, #a7e6b6, #766dcc, #e4bb95, #ec8edd);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    height: 100vh;
-}
 
 @keyframes gradient {
     0% {
@@ -57,9 +47,8 @@ footer {
 
 nav {
     background-color: rgb(2, 2, 2);
-    height: 60px;
-    padding-top: .3rem;
-    padding-bottom: .3rem;
+    padding-top: .1rem;
+    padding-bottom: .1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -140,14 +129,8 @@ nav ul li a {
     margin-right: 0px;
 }
 
-.intro-info, .about-info, .projects-info, .skills-info, .education-info, footer {
-    flex-shrink: 0;
-}
-
 .intro-info {
-    height: 92vh;
-    min-height: 80vh;
-    background-color: pink;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -182,7 +165,7 @@ nav ul li a {
     display: flex;
     flex-direction: column;
     max-width: 450px;
-    height: 70vh;
+    height: 600px;
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -223,8 +206,7 @@ nav ul li a {
 
 
 .about-info {
-    height: 65vh;
-    min-height: 60vh;
+    height: 0%;
     max-width: 100%;
     background-color: #E0E4E2;
     display: flex;
@@ -234,7 +216,7 @@ nav ul li a {
 }
 
 .about-images {
-    margin: 6.8vw 2vw 2vw 6vw;
+    margin: 6.8vw 2vw 7vw 6vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -289,7 +271,7 @@ nav ul li a {
 }
 
 .about-description {
-    margin: 9vw 6vw 2vw 4vw;
+    margin: 9.5vw 6vw 3vw 4vw;
 }
 
 .about-description h2 {
@@ -307,7 +289,7 @@ nav ul li a {
 
 
 .projects-info {
-    height: 50vh;
+    height: 1%;
     width: 100%;
     background-color: #E2D6E1;
     display: flex;
@@ -318,7 +300,7 @@ nav ul li a {
 
 
 .projects-description {
-    margin: 7.5vw 7vw 2vw 7vw;
+    margin: 9vw 7vw 7vw 7vw;
     display: flex;
     flex-direction: column; 
 }
@@ -336,7 +318,7 @@ nav ul li a {
 }
 
 .projects-button {
-    margin: 5vw 7vw 2vw 7vw;
+    margin: 5vw 7vw 7vw 7vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -368,7 +350,7 @@ nav ul li a {
 
 
 .skills-info {
-    height: 70vh;
+ 
     width: 100%;
     background-color: #F0D7C2;
     display: flex;
@@ -379,7 +361,7 @@ nav ul li a {
 }
 
 .skills-info h2 {
-    margin-top: 4vw;
+    margin-top: 5vw;
     margin-bottom: 3vw;
     font-size: 2.5em;
 }
@@ -401,6 +383,7 @@ nav ul li a {
     align-items: center;
     padding: 1rem 3rem 1rem 3rem;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Box shadow to create floating effect */
+    margin-bottom: 7vw;
     width: 28%;
 }
 
@@ -427,7 +410,7 @@ nav ul li a {
 }
 
 .education-info {
-    height: 75vh;
+    height: 1%;
     width: 100%;
     background-color: #E0E4E2;
     display: flex;
@@ -437,7 +420,7 @@ nav ul li a {
 }
 
 .education-info h2 {
-    margin-top: 4.5vw;
+    margin-top: 5vw;
     margin-bottom: 3vw;
     font-size: 2.5em;
 }
@@ -512,7 +495,7 @@ nav ul li a {
 
 
 footer {
-    height: 37vh;
+    height:0%;
     width: 100%;
     background-color: pink;
     display: flex;
@@ -558,6 +541,7 @@ footer {
 
 .c-text {
     font-size: .6em;
+    margin-bottom: 1vw;
 }
 
 .rev {
